@@ -22,9 +22,9 @@ import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.web.server.ResponseStatusException;
 import uk.ac.ebi.biosamples.exceptions.GlobalExceptions;
 import uk.ac.ebi.biosamples.model.AuthToken;
+import uk.ac.ebi.biosamples.model.Relationship;
 import uk.ac.ebi.biosamples.model.Sample;
 import uk.ac.ebi.biosamples.model.SubmittedViaType;
 import uk.ac.ebi.biosamples.model.auth.AuthorizationProvider;
@@ -41,6 +41,7 @@ import uk.ac.ebi.biosamples.validation.SchemaValidationService;
 @CrossOrigin
 public class BulkActionControllerV2 {
   private final Logger log = LoggerFactory.getLogger(getClass());
+  private static final String SRA_ACCESSION = "SRA accession";
   private final SampleService sampleService;
   private final BioSamplesAapService bioSamplesAapService;
   private final BioSamplesWebinAuthenticationService bioSamplesWebinAuthenticationService;
@@ -78,7 +79,10 @@ public class BulkActionControllerV2 {
 
     samples.forEach(
         sample -> {
-          if (sample.hasAccession()) {
+          if (sample.hasAccession()
+              || sample.getAttributes() != null
+                  && sample.getAttributes().stream()
+                      .anyMatch(attribute -> attribute.getType().equalsIgnoreCase(SRA_ACCESSION))) {
             throw new GlobalExceptions.SampleWithAccessionSubmissionException();
           }
         });
@@ -134,7 +138,7 @@ public class BulkActionControllerV2 {
                    */
                   return sampleService.accessionSample(sample);
                 })
-            .collect(Collectors.toList());
+            .toList();
 
     final Map<String, String> outputMap =
         createdSamplesList.stream()
@@ -174,10 +178,10 @@ public class BulkActionControllerV2 {
         accessions.stream()
             .map(
                 accession -> {
-                  final String cleanAccession = accession.trim();
+                  final String justAccession = accession.trim();
                   final Optional<Sample> sampleOptional =
                       sampleService.fetch(
-                          cleanAccession, Optional.of(Collections.singletonList("")));
+                          justAccession, Optional.of(Collections.singletonList("")));
 
                   if (sampleOptional.isPresent()) {
                     final boolean webinAuth =
@@ -209,7 +213,7 @@ public class BulkActionControllerV2 {
                   }
                 })
             .filter(Objects::nonNull)
-            .collect(Collectors.toList());
+            .toList();
 
     log.info(
         "V2-Received bulk-fetch request for : "
@@ -250,72 +254,16 @@ public class BulkActionControllerV2 {
         throw new GlobalExceptions.WebinTokenInvalidException();
       }
 
-      final boolean isWebinSuperUser =
-          bioSamplesWebinAuthenticationService.isWebinSuperUser(webinSubmissionAccountId);
-
       createdSamples =
           samples.stream()
               .map(
-                  sample -> {
-                    final String sampleAccession = sample.getAccession();
-                    Optional<Sample> oldSample = Optional.empty();
-
-                    if (sampleAccession != null) {
-                      oldSample = sampleService.fetch(sampleAccession, Optional.empty());
-
-                      if (!isWebinSuperUser && !oldSample.isPresent()) {
-                        throw new ResponseStatusException(
-                            HttpStatus.BAD_REQUEST,
-                            "New submission should not consist of an accession");
-                      }
-                    }
-
-                    sample =
-                        bioSamplesWebinAuthenticationService.handleWebinUserSubmission(
-                            sample, webinSubmissionAccountId, oldSample);
-                    sample = buildSample(sample, isWebinSuperUser);
-
-                    sampleService.validateSampleHasNoRelationshipsV2(sample);
-
-                    if (!isWebinSuperUser) {
-                      sample = validateSample(sample, true);
-                    }
-
-                    return sampleService.persistSampleV2(
-                        sample, oldSample.orElse(null), authProvider, isWebinSuperUser);
-                  })
+                  sample ->
+                      persistSampleV2WebinAuth(authProvider, webinSubmissionAccountId, sample))
               .collect(Collectors.toList());
     } else {
       createdSamples =
           samples.stream()
-              .map(
-                  sample -> {
-                    final String sampleAccession = sample.getAccession();
-                    final boolean isAapSuperUser = bioSamplesAapService.isWriteSuperUser();
-                    Optional<Sample> oldSample = Optional.empty();
-
-                    if (sampleAccession != null) {
-                      oldSample = sampleService.fetch(sampleAccession, Optional.empty());
-
-                      if (!isAapSuperUser && !oldSample.isPresent()) {
-                        throw new ResponseStatusException(
-                            HttpStatus.BAD_REQUEST,
-                            "New submission should not consist of an accession");
-                      }
-                    }
-
-                    sample = bioSamplesAapService.handleSampleDomain(sample, oldSample);
-                    sample = buildSample(sample, false);
-
-                    sampleService.validateSampleHasNoRelationshipsV2(sample);
-
-                    if (!isAapSuperUser) {
-                      sample = validateSample(sample, false);
-                    }
-
-                    return sampleService.persistSampleV2(
-                        sample, oldSample.orElse(null), authProvider, false);
-                  })
+              .map(sample -> persistSampleV2AapAuth(authProvider, sample))
               .collect(Collectors.toList());
     }
 
@@ -329,8 +277,56 @@ public class BulkActionControllerV2 {
     return ResponseEntity.status(HttpStatus.CREATED).body(createdSamples);
   }
 
-  private Sample buildSample(final Sample sample, final boolean isWebinSuperUser) {
+  private Sample persistSampleV2AapAuth(final AuthorizationProvider authProvider, Sample sample) {
+    final boolean isAapSuperUser = bioSamplesAapService.isWriteSuperUser();
+    final Optional<Sample> oldSample =
+        sampleService.validateSampleWithAccessionsAgainstConditionsAndGetOldSample(
+            sample, isAapSuperUser);
+    final Set<Relationship> relationships =
+        sampleService.handleSampleRelationshipsV2(sample, oldSample, isAapSuperUser);
+
+    sample = bioSamplesAapService.handleSampleDomain(sample, oldSample);
+    sample = buildSample(sample, relationships, false);
+
+    sampleService.handleSampleRelationshipsV2(sample, oldSample, isAapSuperUser);
+
+    if (!isAapSuperUser) {
+      sample = validateSample(sample, false);
+    }
+
+    return sampleService.persistSampleV2(sample, oldSample.orElse(null), authProvider, false);
+  }
+
+  private Sample persistSampleV2WebinAuth(
+      final AuthorizationProvider authProvider,
+      final String webinSubmissionAccountId,
+      Sample sample) {
+    final boolean isWebinSuperUser =
+        bioSamplesWebinAuthenticationService.isWebinSuperUser(webinSubmissionAccountId);
+    final Optional<Sample> oldSample =
+        sampleService.validateSampleWithAccessionsAgainstConditionsAndGetOldSample(
+            sample, isWebinSuperUser);
+    final Set<Relationship> relationships =
+        sampleService.handleSampleRelationshipsV2(sample, oldSample, isWebinSuperUser);
+
+    sample =
+        bioSamplesWebinAuthenticationService.handleWebinUserSubmission(
+            sample, webinSubmissionAccountId, oldSample);
+
+    sample = buildSample(sample, relationships, isWebinSuperUser);
+
+    if (!isWebinSuperUser) {
+      sample = validateSample(sample, true);
+    }
+
+    return sampleService.persistSampleV2(
+        sample, oldSample.orElse(null), authProvider, isWebinSuperUser);
+  }
+
+  private Sample buildSample(
+      final Sample sample, final Set<Relationship> relationships, final boolean isWebinSuperUser) {
     return Sample.Builder.fromSample(sample)
+        .withRelationships(relationships)
         .withCreate(sampleService.defineCreateDate(sample, isWebinSuperUser))
         .withSubmitted(sampleService.defineSubmittedDate(sample, isWebinSuperUser))
         .withUpdate(Instant.now())
