@@ -60,11 +60,10 @@ public class FileUploadService {
       final String webinId,
       final FileUploadUtils fileUploadUtils) {
     final ValidationResult validationResult = new ValidationResult();
+    final boolean isWebin = isWebinIdUsedToAuthenticate(webinId);
+    final String uniqueUploadId = UUID.randomUUID().toString();
 
     this.fileUploadUtils = fileUploadUtils;
-    final String authProvider = isWebin(isWebinIdUsedToAuthenticate(webinId));
-    final boolean isWebin = authProvider.equals(FileUploadUtils.WEBIN_AUTH);
-    final String uniqueUploadId = UUID.randomUUID().toString();
 
     try {
       final MongoFileUpload mongoFileUploadInitial =
@@ -116,12 +115,14 @@ public class FileUploadService {
           samples.stream()
               .filter(sample -> sample.getAccession() != null)
               .map(sample -> new SampleNameAccessionPair(sample.getName(), sample.getAccession()))
-              .collect(Collectors.toList());
+              .toList();
       final String persistenceMessage = "Number of samples persisted: " + accessionsList.size();
 
       log.info("Persistence message: " + persistenceMessage);
+
       validationResult.addValidationMessage(
           new ValidationResult.ValidationMessage(uniqueUploadId, persistenceMessage, false));
+
       log.info(
           "Final message: "
               + validationResult.getValidationMessagesList().stream()
@@ -141,6 +142,12 @@ public class FileUploadService {
             BioSamplesFileUploadSubmissionStatus.COMPLETED_WITH_ERRORS;
       }
 
+      final String joinedValidationMessage =
+          validationResult.getValidationMessagesList().stream()
+              .map(
+                  validationMessage ->
+                      validationMessage.getMessageKey() + ":" + validationMessage.getMessageValue())
+              .collect(Collectors.joining(" -- "));
       final MongoFileUpload mongoFileUploadCompleted =
           new MongoFileUpload(
               uniqueUploadId,
@@ -148,8 +155,8 @@ public class FileUploadService {
               isWebin ? webinId : aapDomain,
               checklist,
               isWebin,
-              new ArrayList<>(),
-              null);
+              accessionsList,
+              joinedValidationMessage);
 
       mongoFileUploadRepository.save(mongoFileUploadCompleted);
 
@@ -217,7 +224,7 @@ public class FileUploadService {
   }
 
   private boolean isWebinIdUsedToAuthenticate(final String webinId) {
-    return webinId != null && webinId.toUpperCase().startsWith(FileUploadUtils.WEBIN_AUTH);
+    return webinId != null && webinId.toUpperCase().startsWith("WEBIN");
   }
 
   private List<Sample> addRelationshipsAndThenBuildSamples(
@@ -358,6 +365,8 @@ public class FileUploadService {
 
       return sample;
     } catch (final Exception e) {
+      e.printStackTrace();
+
       if (e instanceof GlobalExceptions.SampleNotAccessibleException) {
         validationResult.addValidationMessage(
             new ValidationResult.ValidationMessage(
